# verba

./: .env.docker  .gitignore  docker-compose.yml  package.json  vite.config.ts
.github/workflows/: deploy-web.yml  release.yml
public/legal/: baa.md
sidecar/: Dockerfile  main.py  requirements.txt  server.py
sidecar/api/: account.py  admin.py  analysis_models.py  audit.py  auth.py  baa.py  billing.py  explain_models.py  history_models.py  letter_models.py  middleware.py  models.py  phi_audit.py  practice.py  rate_limit.py  routes.py  settings_store.py  template_models.py
sidecar/extraction/: compound_detector.py  demographics.py  emr_fingerprint.py  physician_extractor.py  pipeline.py  reference_range_extractor.py  vision_ocr.py
sidecar/llm/: client.py  prompt_engine.py  response_parser.py
sidecar/phi/: image_redactor.py  scrubber.py
sidecar/storage/: __init__.py  conditional_pattern_analyzer.py  database.py  edit_analyzer.py  feedback_analyzer.py  keychain.py  pg_database.py  term_extractor.py
sidecar/test_types/: __init__.py  _registry_data.py  base.py  generic.py  llm_detector.py  llm_measurement_extractor.py  registry.py
sidecar/tests/: test_keychain.py  test_llm_pipeline.py  test_settings_store.py  test_storage.py
sql/: rds_migration.sql  rls_sync_tables.sql  sharing_migration.sql
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/binaries/: sidecar-aarch64-apple-darwin
src-tauri/src/: commands.rs  lib.rs
src/hooks/: useIdleTimeout.ts  useSidecar.ts
src/services/: adminUsageQueries.ts  platform.ts  (+4 more)
(+80 files in other folders)
