[package]
name = "explify"
version = "0.2.3"
description = "Explify Desktop Application"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.5", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
